[tool.poetry]
name = "alien-smash"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "alien_smash"}]

[tool.poetry.dependencies]
python = "^3.9"
pgzero = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
